--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "server": "node server.js",
+    "dev": "nodemon server.js",
+    "prod":"NODE_ENV=production nodemon server.js",
     "client": "npm start --prefix ./client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "pre": "concurrently \"npm run dev\" \"npm run client\"",
 
     "install-server":"npm install",
     "start-server":"npm run start",
