--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "export-to-csv": "^1.2.2",
+    "json-2-csv": "^5.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
