--- a/package.json
+++ b/package.json
@@ -7,15 +7,14 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "prod":"NODE_ENV=production nodemon server.js",
+    "prod": "NODE_ENV=production nodemon server.js",
     "client": "npm start --prefix ./client",
     "pre": "concurrently \"npm run dev\" \"npm run client\"",
-
-    "install-server":"npm install",
-    "start-server":"npm run start",
-    "install-client":"cd client && npm install",
-    "build-client":"cd client && npm run build",
-    "start-client":"cd client && npm run start"
+    "install-server": "npm install",
+    "start-server": "npm run start",
+    "install-client": "cd client && npm install",
+    "build-client": "cd client && npm run build",
+    "start-client": "cd client && npm run start"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +27,7 @@
     "express": "^4.18.2",
     "express-formidable": "^1.2.0",
     "fs-extra": "^11.2.0",
+    "json-2-csv": "^5.0.1",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "slugify": "^1.6.6"
