--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.2",
     "export-to-csv": "^1.2.2",
     "json-2-csv": "^5.0.1",
+    "json-to-csv-export": "^2.1.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
