env file update

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT = 8080
-MONGO_URL = 'mongodb+srv://pyo00005:HwomoE87RLzEz8D8@research-webpage.ydojugb.mongodb.net/'
+MONGO_URL = 'mongodb+srv://pyo00005:HwomoE87RLzEz8D8@research-webpage.ydojugb.mongodb.net/webapp'
